--- a/webapp/templates/update_animals.html
+++ b/webapp/templates/update_animals.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-	<title>Callicog - Tasks</title>
+	<title>Callicog - Animals</title>
 </head>
 <body>
 
@@ -61,69 +61,37 @@
 				{{ message }}
 			</div>
 			{% endfor %}-->
-			<h1 class="title">Tasks</h1>
+			<h1 class="title">Animals</h1>
 			<form method="POST" action="">
 				<div class="columns">
 					<div class="column is-one-quarter">
 						<div class="field">
-							<label class="label">Task ID</label>
+							<label class="label">Animal ID</label>
 							<div class="control">
-								<input type="text" name="task_id" class="input" placeholder="Task ID" disabled>
+								<input type="text" name="animal_id" class="input" placeholder="Animal ID" value="{{ animal.animal_id }}" disabled>
 							</div>
 						</div>
 					</div>
 					<div class="column is-one-quarter">
 						<div class="field">
-							<label class="label">Task</label>
+							<label class="label">Alias</label>
 							<div class="control">
-								<input type="text" name="task_name" class="input" placeholder="Task name">
+								<input type="text" name="animal_code" class="input" value="{{ animal.animal_code }}" placeholder="Alias">
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="field is-grouped">
 					<div class="control">
-						<button class="button is-link" type="submit">Add</button>
+						<button class="button is-link" type="submit">Update</button>
+					</div>
+					<div class="control">
+						<a class="button is-danger" href="{{ url_for('deleteAnimal', id=animal.animal_id) }}">Delete</a>
 					</div>
 				</div>
 			</form>
 		</div>
-		<div class="section">
-			<h1 class="title">List</h1>
-			<table class="table">
-				<thead>
-					<tr>
-						<th>Task ID</th>
-						<th>Task name</th>
-					</tr>
-				</thead>
-				<tfoot>
-					<tr>
-						<th>Task ID</th>
-						<th>Task name</th>
-					</tr>
-				</tfoot>
-				<tbody>
-					{% for task in tasks %}
-					<tr>
-						<td>{{ task.protocol_id }}</td>
-						<td><a href="{{ url_for('updateTask', id=task.protocol_id) }}"> {{ task.protocol_name }} </a></td>
-					</tr>
-					{% endfor %}
-				</tbody>
-			</table>
-		</div>
 	</div>
 </div>
-<!--<script type="text/javascript">
-	document.addEventListener('DOMContentLoaded', () => {
-		(document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
-			const $notification = $delete.parentNode;
-			$delete.addEventListener('click', () => {
-				$notification.parentNode.removeChild($notification);
-			});
-		});
-	});
-</script>-->
 </body>
 </html>
