--- a/webapp/templates/tasks.html
+++ b/webapp/templates/tasks.html
@@ -42,7 +42,7 @@
 				<ul class="menu-list">
 					<li><a href="/animals">Animals</a></li>
 					<li><a href="/tasks">Tasks</a></li>
-					<li><a>Experiments</a></li>
+					<li><a href="/templates">Templates</a></li>
 				</ul>
 				<p class="menu-label">
 					Report
