--- a/webapp/templates/trials.html
+++ b/webapp/templates/trials.html
@@ -40,9 +40,9 @@
 					Manage
 				</p>
 				<ul class="menu-list">
-					<li><a>Animals</a></li>
-					<li><a>Tasks</a></li>
-					<li><a>Experiments</a></li>
+					<li><a href="/animals">Animals</a></li>
+					<li><a href="/tasks">Tasks</a></li>
+					<li><a href="/experiments">Experiments</a></li>
 				</ul>
 				<p class="menu-label">
 					Report
