--- a/webapp/templates/update_tasks.html
+++ b/webapp/templates/update_tasks.html
@@ -42,7 +42,7 @@
 				<ul class="menu-list">
 					<li><a href="/animals">Animals</a></li>
 					<li><a href="/tasks">Tasks</a></li>
-					<li><a>Experiments</a></li>
+					<li><a href="/templates">Templates</a></li>
 				</ul>
 				<p class="menu-label">
 					Report
@@ -55,7 +55,7 @@
 	</div>
 	<div class="column is-four-fifths">
 		<div class="section">
-			<h1 class="title">Modify task</h1>
+			<h1 class="title">Update task</h1>
 			<form method="POST" action="">
 				<div class="columns">
 					<div class="column is-one-quarter">
