add experiment end timestamp when all tasks complete

--- a/webapp/templates/experiment_details.html
+++ b/webapp/templates/experiment_details.html
@@ -66,7 +66,7 @@
 			{% for task in experiment.tasks %}
 				<article class="message">
 					<div class="message-header">
-						<p>{{ task.protocol.protocol_name }}</p>
+						<p>{{ task.template_protocol.protocol.protocol_name }}</p>
 					</div>
 					<div class="message-body">
 						<table class="table">
