QOL improvements, fail on touch, download experiment csv

--- a/webapp/templates/experiments.html
+++ b/webapp/templates/experiments.html
@@ -49,7 +49,6 @@
 				</p>
 				<ul class="menu-list">
 					<li><a href="/experiments">Experiments</a></li>
-					<li><a>Trials</a></li>
 				</ul>
 			</aside>
 		</div>
@@ -133,7 +132,7 @@
 						<td>{{ experiment.experiment_id }}</td>
 						<td>{{ experiment.animal.animal_code }}</td>
 						<td>{{ experiment.template.template_name }}</td>
-						<td><a href="{{ url_for('getExperimentDetails', id=experiment.experiment_id) }}">{{ experiment.experiment_start }}</a></td>
+						<td><a href="{{ url_for('saveExperiment', id=experiment.experiment_id) }}">{{ experiment.experiment_start }}</a></td>
 						<td>{{ experiment.experiment_end }}</td>
 						<td>{{ 'ongoing' if experiment.experiment_end == None else 'done' }}</td>
 					</tr>
