--- a/webapp/templates/tasks.html
+++ b/webapp/templates/tasks.html
@@ -48,7 +48,7 @@
 					Report
 				</p>
 				<ul class="menu-list">
-					<li><a>Trials</a></li>
+					<li><a href="/experiments">Experiments</a></li>
 				</ul>
 			</aside>
 		</div>
@@ -76,7 +76,7 @@
 						<div class="field">
 							<label class="label">Task</label>
 							<div class="control">
-								<input type="text" name="task_name" class="input" placeholder="Task name">
+								<input type="text" name="task_name" class="input" placeholder="Task name" autofocus>
 							</div>
 						</div>
 					</div>
