--- a/webapp/templates/animals.html
+++ b/webapp/templates/animals.html
@@ -48,7 +48,7 @@
 					Report
 				</p>
 				<ul class="menu-list">
-					<li><a>Trials</a></li>
+					<li><a href="/experiments">Experiments</a></li>
 				</ul>
 			</aside>
 		</div>
@@ -76,7 +76,7 @@
 						<div class="field">
 							<label class="label">Alias</label>
 							<div class="control">
-								<input type="text" name="animal_code" class="input" placeholder="Alias">
+								<input type="text" name="animal_code" class="input" placeholder="Alias" autofocus>
 							</div>
 						</div>
 					</div>
