--- a/webapp/templates/update_tasks.html
+++ b/webapp/templates/update_tasks.html
@@ -48,7 +48,7 @@
 					Report
 				</p>
 				<ul class="menu-list">
-					<li><a>Trials</a></li>
+					<li><a href="/experiments">Experiments</a></li>
 				</ul>
 			</aside>
 		</div>
