--- a/webapp/templates/update_templates.html
+++ b/webapp/templates/update_templates.html
@@ -48,7 +48,7 @@
 					Report
 				</p>
 				<ul class="menu-list">
-					<li><a>Trials</a></li>
+					<li><a href="/experiments">Experiments</a></li>
 				</ul>
 			</aside>
 		</div>
@@ -86,7 +86,7 @@
 						<button class="button is-link" type="submit">Update</button>
 					</div>
 					<div class="control">
-						<a class="button is-danger" href="{{ url_for('deleteTemplate', id=template.template_id) }}">Delete</a>
+						<a class="button is-danger" href="{{ url_for('deleteTemplate', id=template.template_id) }}" onclick="return confirm('This will DELETE all associated experiments. Do you really want to continue?');">Delete</a>
 					</div>
 				</div>
 			</form>
