--- a/webapp/templates/update_template_tasks.html
+++ b/webapp/templates/update_template_tasks.html
@@ -49,6 +49,7 @@
 				</p>
 				<ul class="menu-list">
 					<li><a href="/experiments">Experiments</a></li>
+					<li><a href="/trials">Trials</a></li>
 				</ul>
 			</aside>
 		</div>
