Fix webapp search

--- a/webapp/templates/trials.html
+++ b/webapp/templates/trials.html
@@ -190,7 +190,10 @@
 				</div>
 				<div class="field is-grouped">
 					<div class="control">
-						<button class="button is-link" type="submit">Search</button>
+						<button class="button is-link" name="action" value="search" type="submit">Search</button>
+					</div>
+					<div class="control">
+						<button class="button is-link" name="action" value="export" formmethod="post" type="submit">Foo</button>
 					</div>
 					<div class="control">
 						<a class="button is-success" href="#" onclick="download_table_as_csv('trial_table');">Export</a>
