--- a/webapp/templates/update_tasks.html
+++ b/webapp/templates/update_tasks.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/bulma.min.css') }}">
 	<title>Callicog - Tasks</title>
 </head>
 <body>
