--- a/src/callicog/webapp/templates/animals.html
+++ b/src/callicog/webapp/templates/animals.html
@@ -1,130 +1,131 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/bulma.min.css') }}">
-	<title>Callicog - Animals</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bulma.min.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <title>Callicog - Animals</title>
 </head>
 <body>
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
-	<div class="navbar-brand">
-		<a class="navbar-item" style="font-weight: 900; font-size: large;">
-			Callicog
-		</a>
+    <div class="navbar-brand">
+        <a class="navbar-item" style="font-weight: 900; font-size: large;">
+            Callicog
+        </a>
 
-		<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-			<span aria-hidden="true"></span>
-			<span aria-hidden="true"></span>
-			<span aria-hidden="true"></span>
-		</a>
-	</div>
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
 
-	<div id="navbarBasicExample" class="navbar-menu">
-		<div class="navbar-start">
-			<a class="navbar-item">
-				Home
-			</a>
-			<a class="navbar-item">
-				Documentation
-			</a>
-		</div>
-	</div>
+    <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+            <a class="navbar-item">
+                Home
+            </a>
+            <a class="navbar-item">
+                Documentation
+            </a>
+        </div>
+    </div>
 </nav>
 
 <div class="columns">
-	<div class="column is-one-fifth">
-		<div class="section">
-			<aside class="menu">
-				<p class="menu-label">
-					Manage
-				</p>
-				<ul class="menu-list">
-					<li><a href="/animals">Animals</a></li>
-					<li><a href="/tasks">Tasks</a></li>
-					<li><a href="/templates">Templates</a></li>
-				</ul>
-				<p class="menu-label">
-					Report
-				</p>
-				<ul class="menu-list">
-					<li><a href="/experiments">Experiments</a></li>
-					<li><a href="/trials">Trials</a></li>
-				</ul>
-			</aside>
-		</div>
-	</div>
-	<div class="column is-four-fifths">
-		<div class="section">
-			<!--{% for message in get_flashed_messages() %}
-			<div class="notification is-success is-light">
-				<button class="delete"></button>
-				{{ message }}
-			</div>
-			{% endfor %}-->
-			<h1 class="title">Animals</h1>
-			<form method="POST" action="">
-				<div class="columns">
-					<div class="column is-one-quarter">
-						<div class="field">
-							<label class="label">Animal ID</label>
-							<div class="control">
-								<input type="text" name="animal_id" class="input" placeholder="Animal ID" disabled>
-							</div>
-						</div>
-					</div>
-					<div class="column is-one-quarter">
-						<div class="field">
-							<label class="label">Alias</label>
-							<div class="control">
-								<input type="text" name="animal_code" class="input" placeholder="Alias" autofocus>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="field is-grouped">
-					<div class="control">
-						<button class="button is-link" type="submit">Add</button>
-					</div>
-				</div>
-			</form>
-		</div>
-		<div class="section">
-			<h1 class="title">List</h1>
-			<table class="table">
-				<thead>
-					<tr>
-						<th>Animal ID</th>
-						<th>Alias</th>
-					</tr>
-				</thead>
-				<tfoot>
-					<tr>
-						<th>Animal ID</th>
-						<th>Alias</th>
-					</tr>
-				</tfoot>
-				<tbody>
-					{% for animal in animals %}
-					<tr>
-						<td>{{ animal.animal_id }}</td>
-						<td><a href="{{ url_for('updateAnimal', id=animal.animal_id) }}"> {{ animal.animal_code }} </a></td>
-					</tr>
-					{% endfor %}
-				</tbody>
-			</table>
-		</div>
-	</div>
+    <div class="column is-one-fifth">
+        <div class="section">
+            <aside class="menu">
+                <p class="menu-label">
+                    Manage
+                </p>
+                <ul class="menu-list">
+                    <li><a href="/animals">Animals</a></li>
+                    <li><a href="/tasks">Tasks</a></li>
+                    <li><a href="/templates">Templates</a></li>
+                </ul>
+                <p class="menu-label">
+                    Report
+                </p>
+                <ul class="menu-list">
+                    <li><a href="/experiments">Experiments</a></li>
+                    <li><a href="/trials">Trials</a></li>
+                </ul>
+            </aside>
+        </div>
+    </div>
+    <div class="column is-four-fifths">
+        <div class="section">
+            <!--{% for message in get_flashed_messages() %}
+            <div class="notification is-success is-light">
+                <button class="delete"></button>
+                {{ message }}
+            </div>
+            {% endfor %}-->
+            <h1 class="title">Animals</h1>
+            <form method="POST" action="">
+                <div class="columns">
+                    <div class="column is-one-quarter">
+                        <div class="field">
+                            <label class="label">Animal ID</label>
+                            <div class="control">
+                                <input type="text" name="animal_id" class="input" placeholder="Animal ID" disabled>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-one-quarter">
+                        <div class="field">
+                            <label class="label">Alias</label>
+                            <div class="control">
+                                <input type="text" name="animal_code" class="input" placeholder="Alias" autofocus>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field is-grouped">
+                    <div class="control">
+                        <button class="button is-link" type="submit">Add</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="section">
+            <h1 class="title">List</h1>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Animal ID</th>
+                        <th>Alias</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th>Animal ID</th>
+                        <th>Alias</th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    {% for animal in animals %}
+                    <tr>
+                        <td>{{ animal.animal_id }}</td>
+                        <td><a href="{{ url_for('updateAnimal', id=animal.animal_id) }}"> {{ animal.animal_code }} </a></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 <!--<script type="text/javascript">
-	document.addEventListener('DOMContentLoaded', () => {
-		(document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
-			const $notification = $delete.parentNode;
-			$delete.addEventListener('click', () => {
-				$notification.parentNode.removeChild($notification);
-			});
-		});
-	});
+    document.addEventListener('DOMContentLoaded', () => {
+        (document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
+            const $notification = $delete.parentNode;
+            $delete.addEventListener('click', () => {
+                $notification.parentNode.removeChild($notification);
+            });
+        });
+    });
 </script>-->
 </body>
 </html>
